# schism

./: .gitignore  Cargo.toml  LICENSE  README.md  mise.toml
src/: input.rs  lib.rs  main.rs  types.rs
src/export/: json.rs  mod.rs  pipe.rs
src/github/: fetch.rs  gh.rs  mod.rs  parse.rs  pr.rs  review.rs  types.rs
src/parse/: file.rs  hunk.rs  mod.rs
src/render/: line.rs  mod.rs  pipe.rs  syntax.rs
src/render/pipe/: plain.rs  tty.rs
src/tui/: app.rs  body.rs  comment.rs  commit_picker.rs  confirm.rs  draw.rs  editor.rs  filetree.rs  fileview.rs  fuzzy.rs  help.rs  keys.rs  markdown.rs  mod.rs  nav.rs  pr_description.rs  rows.rs  search.rs  tree.rs  viewport.rs  wrap.rs
src/tui/commit_picker/: draw.rs
src/tui/draw/: diff.rs  headers.rs  rows.rs
src/tui/fileview/: draw.rs  fetch.rs
src/tui/fuzzy/: draw.rs
src/tui/keys/: body.rs  comment.rs  commit_picker.rs  diff.rs  filetree.rs  fileview.rs  fuzzy.rs  pr_description.rs  search.rs
tests/: github_pr_test.rs  github_review_test.rs  parse_test.rs  syntax_test.rs
